# brainwares

./: .gitignore  Cargo.toml  README.md
.brainwares/: .gitignore
.brainwares/memories/: index.md  src.md
.brainwares/programs/: document.md  refactor.md
.brainwares/ui/: index.html  package.json  pnpm-lock.yaml
.brainwares/ui/src/: App.jsx  index.css
src/: cli.rs  commands.rs  engine.rs  main.rs  parser.rs  vault.rs
