[package]
name = "brainwares"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
walkdir = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "bw"
path = "src/main.rs"

[[bin]]
name = "brainwares"
path = "src/main.rs"
